--- a/extras/python/meson.build
+++ b/extras/python/meson.build
@@ -1,14 +1,14 @@
-boost_dep = dependency('boost')
 cpp_extra_args = ['-I/usr/include/python3.7m']
-link_extra_args = ['-lboost_python37', '-L/usr/lib', '-lpython3.7m', '-lcrypt',
+link_extra_args = ['-L/usr/lib', '-lpython3.7m', '-lcrypt',
                    '-lpthread', '-ldl', '-lutil', '-lm', '-Xlinker', '-export-dynamic']
 
-py_sources = ['btl.cpp']
-libbtl_py = shared_library('btl_py',
+py_sources = ['btl_wrap.cxx']
+libbtl_py = shared_library('_btl',
                            py_sources,
                            include_directories : inc,
-                           dependencies : boost_dep,
                            cpp_args : cpp_extra_args,
                            link_args : link_extra_args,
                            install : true,
                            name_prefix : '')
+
+run_target('wrap-python', command: './gen.sh')
