--- a/extras/java/meson.build
+++ b/extras/java/meson.build
@@ -1,8 +1,13 @@
-cpp_extra_args = ['-I/usr/lib/jvm/java-10-openjdk/include', '-I/usr/lib/jvm/java-10-openjdk/include/linux']
+cpp_extra_args = ['-I/usr/lib/jvm/default/include', '-I/usr/lib/jvm/default/include/linux']
 
-java_sources = ['hello.cpp']
-libbtl_java = shared_library('btl_java',
+java_sources = ['btl_wrap.cxx']
+libbtl_java = shared_library('btl',
                              java_sources,
                              include_directories : inc,
                              cpp_args : cpp_extra_args,
-                             install : true)
+                             install : true,
+                             install_dir : 'java')
+
+#install_data('btl.py', install_dir : 'py')
+
+run_target('wrap-java', command: './gen.sh')
