--- a/extras/python/meson.build
+++ b/extras/python/meson.build
@@ -1,10 +1,10 @@
-cpp_extra_args = ['-I/usr/include/python3.7m']
-link_extra_args = ['-lpython3.7m', '-lcrypt', '-lpthread', '-ldl', '-lutil', '-lm', '-Xlinker', '-export-dynamic']
+cpp_extra_args = run_command('python-config', '--cflags').stdout().strip().split()
+link_extra_args = run_command('python-config', '--ldflags').stdout().strip().split()
 
 py_sources = ['btl_wrap.cxx']
 libbtl_py = shared_library('_btl',
                            py_sources,
-                           include_directories : inc,
+                           include_directories : btl_include,
                            cpp_args : cpp_extra_args,
                            link_args : link_extra_args,
                            install : true,
