--- a/meson.build
+++ b/meson.build
@@ -7,13 +7,13 @@ thread_dep = dependency('threads')
 
 btl_include = include_directories('include')
 
-tidy_files = files(['include/sequence.h'])
+tidy_files = files(['include/sequence.h', 'include/sequence_reader.h', 'include/check.h'])
 clang_tidy = find_program('clang-tidy', required: false)
 if clang_tidy.found()
     run_target('tidy', command: ['scripts/tidy.sh'] + tidy_files)
 endif
 
-format_files = files([])
+format_files = files(['include/sequence_reader.h', 'include/check.h'])
 cat = find_program('cat', required : false)
 diff = find_program('diff', required : false)
 clang_format = find_program('clang-format', required: false)
