--- a/include/meson.build
+++ b/include/meson.build
@@ -1,3 +1,3 @@
-header_files = ['sequence.h']
+header_files = ['sequence.h', 'sequence_reader.h', 'check.h']
 
 install_headers(header_files, subdir : 'btl')
