--- a/meson.build
+++ b/meson.build
@@ -7,24 +7,24 @@ thread_dep = dependency('threads')
 
 btl_include = include_directories('include')
 
-tidy_files = files(['include/sequence.h', 'include/sequence_reader.h', 'include/check.h'])
 clang_tidy = find_program('clang-tidy', required: false)
 if clang_tidy.found()
-    run_target('tidy', command: ['scripts/tidy.sh'] + tidy_files)
+    run_target('tidy', command: 'scripts/tidy.sh')
 endif
 
-format_files = files(['include/sequence_reader.h', 'include/check.h'])
 cat = find_program('cat', required : false)
 diff = find_program('diff', required : false)
 clang_format = find_program('clang-format', required: false)
 if cat.found() and diff.found() and clang_format.found()
-    run_target('format', command: ['scripts/format.sh'] + format_files)
+    run_target('format', command: 'scripts/format.sh')
 endif
 
 cppcheck = find_program('cppcheck', required: false)
 if cppcheck.found()
     run_target('cppcheck', command: 'scripts/cppcheck.sh')
 endif
+
+run_target('wrap', command: 'wrap.sh')
 
 subdir('include')
 subdir('tests')
