--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,18 +24,14 @@ steps:
     ninja
   displayName: 'Build the project'
 
-- script: |
-    ninja format
+- script: cd build && ninja format
   displayName: 'Do clang-format'
 
-- script: |
-    ninja tidy
+- script: cd build && ninja tidy
   displayName: 'Do clang-tidy'
 
-- script: |
-    ninja cppcheck
+- script: cd build && ninja cppcheck
   displayName: 'Do cppcheck'
 
-- script: |
-    ninja test
+- script: cd build && ninja test
   displayName: 'Do tests'
