--- a/extras/python/meson.build
+++ b/extras/python/meson.build
@@ -1,5 +1,5 @@
-cpp_extra_args = run_command('python-config', '--includes').stdout().strip().split()
-link_extra_args = run_command('python-config', '--libs').stdout().strip().split()
+cpp_extra_args = run_command('python3-config', '--includes').stdout().strip().split()
+link_extra_args = run_command('python3-config', '--libs').stdout().strip().split()
 
 cpp_extra_args += ['-w']
 
@@ -10,8 +10,8 @@ libbtl_py = shared_library('_btl',
                            cpp_args : cpp_extra_args,
                            link_args : link_extra_args,
                            install : true,
-                           install_dir : 'py',
+                           install_dir : 'python',
                            name_prefix : '')
 
 python_files = ['btl.py']
-install_data(python_files, install_dir : 'py')
+install_data(python_files, install_dir : 'python')
