--- a/include/meson.build
+++ b/include/meson.build
@@ -1,2 +1,6 @@
-header_files = files(run_command('../scripts/get_include_files.sh').stdout().strip().split())
-install_headers(header_files, subdir : 'btl')
+header_paths = run_command('../scripts/get_include_files').stdout().strip().split()
+
+foreach header : header_paths
+    relative = run_command('../scripts/get_include_relative', header).stdout().strip()
+    install_headers(files(header), subdir: relative)
+endforeach
