--- a/extras/python/meson.build
+++ b/extras/python/meson.build
@@ -6,15 +6,15 @@ link_extra_args += [ libpython ]
 
 cpp_extra_args += ['-w']
 
-py_sources = ['btl_wrap.cxx']
-libbtl_py = shared_library('_btl',
+py_sources = ['btllib_wrap.cxx']
+btllib_py = shared_library('_btllib',
                            py_sources,
-                           include_directories : btl_include,
+                           include_directories : btllib_include,
                            cpp_args : cpp_extra_args,
                            link_args : link_extra_args,
                            install : true,
                            install_dir : 'python',
                            name_prefix : '')
 
-python_files = ['btl.py']
+python_files = ['btllib.py']
 install_data(python_files, install_dir : 'python')
