--- a/extras/python/meson.build
+++ b/extras/python/meson.build
@@ -1,5 +1,5 @@
-cpp_extra_args = run_command('python3-config', '--includes').stdout().strip().split()
-link_extra_args = run_command('python3-config', '--libs').stdout().strip().split()
+cpp_extra_args = run_command('python3-config', '--cflags').stdout().strip().split()
+link_extra_args = run_command('python3-config', '--ldflags').stdout().strip().split()
 
 libpython = run_command('../../scripts/get_libpython').stdout().strip()
 link_extra_args += [ libpython ]
