--- a/extras/python/meson.build
+++ b/extras/python/meson.build
@@ -1,4 +1,4 @@
-pyflags = run_command('../../scripts/get_python_flags').stderr().split('\n')
+pyflags = run_command('../../scripts/get_python_flags').stdout().split('\n')
 cpp_extra_args = pyflags[0].strip().split()
 link_extra_args = pyflags[1].strip().split()
 
