Fix a MacOS error

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,40 +1,75 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
-pool:
-  vmImage: 'ubuntu-latest'
+- job: linux
+  pool:
+    vmImage: 'ubuntu-latest'
 
-steps:
+  steps:
 
-- task: UsePythonVersion@0
-  inputs:
-    versionSpec: '3.8'
+  - task: UsePythonVersion@0
+    inputs:
+      versionSpec: '3.8'
 
-- script: |
-    wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
-    sudo apt-add-repository "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-8 main"
-    sudo apt-get update
-    sudo apt-get install --yes --no-install-recommends clang-format-8 clang-tidy-8 cppcheck \
-      python3-setuptools libboost-dev samtools
-    sudo ln -s clang-format-8 /usr/bin/clang-format
-    sudo ln -s clang-tidy-8 /usr/bin/clang-tidy
-    sudo pip3 install ninja meson
-  displayName: 'Install required software'
+  - script: |
+      wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
+      sudo apt-add-repository "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-8 main"
+      sudo apt-get update
+      sudo apt-get install --yes --no-install-recommends clang-format-8 clang-tidy-8 cppcheck \
+        python3-setuptools libboost-dev samtools
+      sudo ln -s clang-format-8 /usr/bin/clang-format
+      sudo ln -s clang-tidy-8 /usr/bin/clang-tidy
+      sudo pip3 install ninja meson
+    displayName: 'Install required software'
 
-- script: |
-    meson setup build
-    cd build
-    ninja
-  displayName: 'Build the project'
-  
-- script: cd build && ninja formatcheck
-  displayName: 'Run clang-format'
-  
-- script: cd build && ninja tidycheck
-  displayName: 'Run clang-tidy'
-  
-- script: cd build && ninja cppcheck
-  displayName: 'Run cppcheck'
-  
-- script: cd build && meson test --repeat=10
-  displayName: 'Run tests'
+  - script: |
+      meson setup build
+      cd build
+      ninja
+    displayName: 'Build the project'
+
+  - script: cd build && ninja formatcheck
+    displayName: 'Run clang-format'
+
+  - script: cd build && ninja tidycheck
+    displayName: 'Run clang-tidy'
+
+  - script: cd build && ninja cppcheck
+    displayName: 'Run cppcheck'
+
+  - script: cd build && meson test --repeat=10
+    displayName: 'Run tests'
+
+- job: macos
+  pool:
+    vmImage: 'macOS-latest'
+
+  steps:
+
+  - task: UsePythonVersion@0
+    inputs:
+      versionSpec: '3.8'
+
+  - script: |
+      brew update
+      brew install python3 clang-tidy clang-format cppcheck boost samtools
+      sudo pip3 install ninja meson
+    displayName: 'Install required software'
+
+  - script: |
+      meson setup build
+      cd build
+      ninja
+    displayName: 'Build the project'
+
+  - script: cd build && ninja formatcheck
+    displayName: 'Run clang-format'
+
+  - script: cd build && ninja tidycheck
+    displayName: 'Run clang-tidy'
+
+  - script: cd build && ninja cppcheck
+    displayName: 'Run cppcheck'
+
+  - script: cd build && meson test --repeat=10
+    displayName: 'Run tests'
