--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,22 +1,20 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
+jobs:
+
 - job: linux
   pool:
     vmImage: 'ubuntu-latest'
 
   steps:
 
-  - task: UsePythonVersion@0
-    inputs:
-      versionSpec: '3.8'
-
   - script: |
       wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
       sudo apt-add-repository "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-8 main"
       sudo apt-get update
       sudo apt-get install --yes --no-install-recommends clang-format-8 clang-tidy-8 cppcheck \
-        python3-setuptools libboost-dev samtools
+        python3 python3-setuptools libboost-dev samtools
       sudo ln -s clang-format-8 /usr/bin/clang-format
       sudo ln -s clang-tidy-8 /usr/bin/clang-tidy
       sudo pip3 install ninja meson
@@ -46,13 +44,11 @@
 
   steps:
 
-  - task: UsePythonVersion@0
-    inputs:
-      versionSpec: '3.8'
-
   - script: |
       brew update
-      brew install python3 clang-tidy clang-format cppcheck boost samtools
+      brew install llvm python3 libomp cppcheck boost samtools
+      sudo ln -s $(brew --prefix llvm)/bin/clang-format /usr/local/bin/clang-format
+      sudo ln -s $(brew --prefix llvm)/bin/clang-tidy /usr/local/bin/clang-tidy
       sudo pip3 install ninja meson
     displayName: 'Install required software'
 
