--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,7 +46,7 @@ jobs:
 
   - script: |
       brew update
-      brew install llvm python3 libomp cppcheck boost samtools
+      brew install llvm python3 libomp cppcheck boost samtools coreutils
       sudo ln -s $(brew --prefix llvm)/bin/clang-format /usr/local/bin/clang-format
       sudo ln -s $(brew --prefix llvm)/bin/clang-tidy /usr/local/bin/clang-tidy
       sudo pip3 install ninja meson
