Gotta catch 'em all

--- a/meson.build
+++ b/meson.build
@@ -6,8 +6,8 @@ project('btllib', 'cpp',
 global_args = [ '-pthread' ]
 global_link_args = [ '-ldl', '-lpthread' ]
 if build_machine.system() == 'darwin'
-  global_args += [ '-Xpreprocessor', '-fopenmp', '-lomp' ]
-  global_link_args += [ '-Xpreprocessor', '-fopenmp', '-lomp' ]
+  global_args += [ '-Xpreprocessor', '-fopenmp' ]
+  global_link_args += [ '-Xpreprocessor', '-fopenmp' ]
 else
   global_args += [ '-fopenmp' ]
   global_link_args += [ '-fopenmp' ]
