Print test logs

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,7 @@ jobs:
   - script: cd build && ninja cppcheck
     displayName: 'Run cppcheck'
 
-  - script: cd build && meson test --repeat=10
+  - script: cd build && meson test --repeat=10 && cat meson-logs/testlog.txt
     displayName: 'Run tests'
 
 - job: macos
@@ -67,5 +67,5 @@ jobs:
   - script: cd build && ninja cppcheck
     displayName: 'Run cppcheck'
 
-  - script: cd build && meson test --repeat=10
+  - script: cd build && meson test --repeat=10 && cat meson-logs/testlog.txt
     displayName: 'Run tests'
