--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ jobs:
       sudo apt-add-repository "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-8 main"
       sudo apt-get update
       sudo apt-get install --yes --no-install-recommends clang-format-8 clang-tidy-8 cppcheck \
-        python3 python3-setuptools libboost-dev samtools
+        python3 python3-setuptools libboost-dev samtools xz-utils bzip2
       sudo ln -s clang-format-8 /usr/bin/clang-format
       sudo ln -s clang-tidy-8 /usr/bin/clang-tidy
       sudo pip3 install ninja meson
@@ -35,7 +35,13 @@ jobs:
   - script: cd build && ninja cppcheck
     displayName: 'Run cppcheck'
 
-  - script: cd build && meson test --repeat=10 && cat meson-logs/testlog.txt
+  - script: |
+      cd build
+      meson test --repeat=10
+      if [[ $? -ne 0 ]]; then
+        cat meson-logs/testlog.txt
+        exit 1
+      fi
     displayName: 'Run tests'
 
 - job: macos
@@ -46,7 +52,7 @@ jobs:
 
   - script: |
       brew update
-      brew install llvm python3 libomp cppcheck boost samtools coreutils
+      brew install llvm python3 libomp cppcheck boost samtools coreutils xz bzip2
       sudo ln -s $(brew --prefix llvm)/bin/clang-format /usr/local/bin/clang-format
       sudo ln -s $(brew --prefix llvm)/bin/clang-tidy /usr/local/bin/clang-tidy
       sudo pip3 install ninja meson
@@ -67,5 +73,11 @@ jobs:
   - script: cd build && ninja cppcheck
     displayName: 'Run cppcheck'
 
-  - script: cd build && meson test --repeat=10 && cat meson-logs/testlog.txt
+  - script: |
+      cd build
+      meson test --repeat=10
+      if [[ $? -ne 0 ]]; then
+        cat meson-logs/testlog.txt
+        exit 1
+      fi
     displayName: 'Run tests'
