--- a/.gitattributes
+++ b/.gitattributes
@@ -1,10 +1,10 @@
 .gitattributes export-ignore
 .gitignore export-ignore
-azure-pipelines.yml
+azure-pipelines.yml export-ignore
 docs export-ignore
 Doxyfile export-ignore
 *meson.build export-ignore
-*.i
+*.i export-ignore
 tests export-ignore
 examples export-ignore
 
