--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,7 @@ jobs:
       sudo apt-get update
       sudo apt-get install --yes --no-install-recommends clang-format-8 clang-tidy-8 cppcheck \
         python3 python3-setuptools libboost-dev samtools xz-utils bzip2
+      sudo apt-get install libsdsl-dev
       sudo ln -s clang-format-8 /usr/bin/clang-format
       sudo ln -s clang-tidy-8 /usr/bin/clang-tidy
       sudo pip3 install ninja meson
