--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ jobs:
       sudo apt-add-repository "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-8 main"
       sudo apt-get update
       sudo apt-get install --yes --no-install-recommends clang-format-8 clang-tidy-8 cppcheck \
-        python3 python3-setuptools libboost-dev samtools xz-utils bzip2
+        python3 python3-setuptools openjdk-11-jdk libboost-dev samtools xz-utils bzip2
       sudo ln -s clang-format-8 /usr/bin/clang-format
       sudo ln -s clang-tidy-8 /usr/bin/clang-tidy
       sudo pip3 install ninja meson
@@ -81,3 +81,9 @@ jobs:
         exit 1
       fi
     displayName: 'Run tests'
+
+  - script: |
+      ./compile
+      [[ -d python ]]
+      [[ -d java ]]
+    displayName: 'Test ./compile script (for wrappers)'
