--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,6 +44,12 @@ jobs:
       fi
     displayName: 'Run tests'
 
+  - script: |
+      ./compile
+      [[ -d python ]]
+      [[ -d java ]]
+    displayName: 'Test ./compile script (for wrappers)'
+
 - job: macos
   pool:
     vmImage: 'macOS-latest'
@@ -53,6 +59,7 @@ jobs:
   - script: |
       brew update
       brew install llvm python3 libomp cppcheck boost samtools coreutils xz bzip2
+      brew cask install java
       sudo ln -s $(brew --prefix llvm)/bin/clang-format /usr/local/bin/clang-format
       sudo ln -s $(brew --prefix llvm)/bin/clang-tidy /usr/local/bin/clang-tidy
       sudo pip3 install ninja meson
