--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,7 @@ jobs:
   steps:
 
   - script: |
+      set -o errexit -o pipefail
       wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
       sudo apt-add-repository "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-8 main"
       sudo apt-get update
@@ -21,9 +22,7 @@ jobs:
     displayName: 'Install required software'
 
   - script: |
-      meson setup build
-      cd build
-      ninja
+      meson setup build && cd build && ninja
     displayName: 'Build the project'
 
   - script: cd build && ninja formatcheck
@@ -36,8 +35,7 @@ jobs:
     displayName: 'Run cppcheck'
 
   - script: |
-      cd build
-      meson test --repeat=10
+      cd build && meson test --repeat=10
       if [[ $? -ne 0 ]]; then
         cat meson-logs/testlog.txt
         exit 1
@@ -45,6 +43,7 @@ jobs:
     displayName: 'Run tests'
 
   - script: |
+      set -o errexit -o pipefail
       ./compile
       [[ -d python ]]
       [[ -d java ]]
@@ -57,6 +56,7 @@ jobs:
   steps:
 
   - script: |
+      set -o errexit -o pipefail
       brew update
       brew install llvm python3 libomp cppcheck boost samtools coreutils xz bzip2
       brew cask install java
@@ -66,9 +66,7 @@ jobs:
     displayName: 'Install required software'
 
   - script: |
-      meson setup build
-      cd build
-      ninja
+      meson setup build && cd build && ninja
     displayName: 'Build the project'
 
   - script: cd build && ninja formatcheck
@@ -81,8 +79,7 @@ jobs:
     displayName: 'Run cppcheck'
 
   - script: |
-      cd build
-      meson test --repeat=10
+      cd build && meson test --repeat=10
       if [[ $? -ne 0 ]]; then
         cat meson-logs/testlog.txt
         exit 1
@@ -90,6 +87,7 @@ jobs:
     displayName: 'Run tests'
 
   - script: |
+      set -o errexit -o pipefail
       ./compile
       [[ -d python ]]
       [[ -d java ]]
