--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,12 +12,12 @@ jobs:
   - script: |
       set -o errexit -o pipefail
       wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
-      sudo apt-add-repository "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-8 main"
+      sudo apt-add-repository "deb http://apt.llvm.org/focal/ llvm-toolchain-focal-11 main"
       sudo apt-get update
-      sudo apt-get install --yes --no-install-recommends clang-format-8 clang-tidy-8 cppcheck \
-        python3 python3-setuptools openjdk-11-jdk libboost-dev samtools xz-utils bzip2
-      sudo ln -sf clang-format-8 /usr/bin/clang-format
-      sudo ln -sf clang-tidy-8 /usr/bin/clang-tidy
+      sudo apt-get install --yes --no-install-recommends clang-format-10 clang-tidy-10 cppcheck \
+        python3 python3-setuptools openjdk-14-jdk libboost-dev samtools xz-utils bzip2
+      sudo ln -sf clang-format-10 /usr/bin/clang-format
+      sudo ln -sf clang-tidy-10 /usr/bin/clang-tidy
       sudo pip3 install ninja meson
     displayName: 'Install required software'
 
