--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,7 @@ jobs:
       wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
       sudo apt-add-repository "deb http://apt.llvm.org/focal/ llvm-toolchain-focal-11 main"
       sudo apt-get update
+      sudo apt-get install libsdsl-dev
       sudo apt-get install --yes --no-install-recommends clang-format-10 clang-tidy-10 cppcheck \
         python3 python3-setuptools openjdk-14-jdk libboost-dev samtools xz-utils bzip2
       sudo ln -sf clang-format-10 /usr/bin/clang-format
