add extras and sdsl-lite

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,7 +59,7 @@ jobs:
   - script: |
       set -o errexit -o pipefail
       brew update
-      brew install llvm libomp cppcheck boost samtools coreutils xz
+      brew install llvm libomp cppcheck boost samtools coreutils xz sdsl-lite
       brew tap adoptopenjdk/openjdk
       brew install --cask adoptopenjdk11
       sudo ln -sf $(brew --prefix llvm)/bin/clang-format /usr/local/bin/clang-format
