Add initial MIBloomFilter

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,8 +21,10 @@ jobs:
       sudo pip3 install ninja meson
     displayName: 'Install required software'
 
-  - script: |
-      meson setup build && cd build && ninja
+  - script: meson setup build && cd build && ninja build-sdsl
+    displayName: 'Build sdsl dependency'
+
+  - script: cd build && ninja
     displayName: 'Build the project'
 
   - script: cd build && ninja formatcheck
@@ -66,8 +68,10 @@ jobs:
       sudo pip3 install ninja meson
     displayName: 'Install required software'
 
-  - script: |
-      meson setup build && cd build && ninja
+  - script: meson setup build && cd build && ninja build-sdsl
+    displayName: 'Build sdsl dependency'
+
+  - script: cd build && ninja
     displayName: 'Build the project'
 
   - script: cd build && ninja formatcheck
