Ensure proper ordering of link args

--- a/extras/python/meson.build
+++ b/extras/python/meson.build
@@ -4,6 +4,10 @@ link_extra_args = pyflags[1].strip().split()
 
 cpp_extra_args += ['-w']
 
+# Ensure proper ordering, arguments will be deduplicated anyway
+cpp_extra_args = global_args + cpp_extra_args
+link_extra_args = global_link_args + link_extra_args
+
 py_sources = ['btllib_wrap.cxx']
 btllib_py = shared_library('_btllib',
                            py_sources,
