--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ jobs:
       sudo apt-add-repository "deb http://apt.llvm.org/focal/ llvm-toolchain-focal-11 main"
       sudo apt-get update
       sudo apt-get install --yes --no-install-recommends clang-format-10 clang-tidy-10 cppcheck \
-        python3 python3-setuptools openjdk-14-jdk libboost-dev samtools xz-utils bzip2
+        python3 python3-setuptools openjdk-14-jdk libboost-dev samtools xz-utils bzip2 lrzip
       sudo ln -sf clang-format-10 /usr/bin/clang-format
       sudo ln -sf clang-tidy-10 /usr/bin/clang-tidy
       sudo pip3 install ninja==1.10.0 meson==0.56.2
@@ -64,7 +64,7 @@ jobs:
   - script: |
       set -o errexit -o pipefail
       brew update
-      brew install llvm libomp cppcheck boost samtools coreutils xz
+      brew install llvm libomp cppcheck boost samtools coreutils xz lrzip
       brew tap adoptopenjdk/openjdk
       brew install --cask adoptopenjdk11
       sudo ln -sf $(brew --prefix llvm)/bin/clang-format /usr/local/bin/clang-format
