--- a/extras/python/meson.build
+++ b/extras/python/meson.build
@@ -9,7 +9,7 @@ cpp_extra_args = global_args + cpp_extra_args
 link_extra_args = global_link_args + link_extra_args
 
 py_sources = ['btllib_wrap.cxx']
-btllib_py = shared_library('_btllib',
+btllib_py = shared_module('_btllib',
                            py_sources,
                            include_directories : btllib_include,
                            cpp_args : cpp_extra_args,
