--- a/extras/java/meson.build
+++ b/extras/java/meson.build
@@ -19,6 +19,7 @@ cpp_extra_args += ['-w']
 java_sources = ['btllib_wrap.cxx']
 btllib_java = shared_module('btllib',
                              java_sources,
+                             name_suffix : 'so',
                              include_directories : btllib_include,
                              cpp_args : cpp_extra_args,
                              install : true,
