--- a/extras/python/meson.build
+++ b/extras/python/meson.build
@@ -13,6 +13,7 @@ btllib_py = shared_module('_btllib',
                            py_sources,
                            name_suffix : 'so',
                            include_directories : btllib_include,
+                           dependencies : deps,
                            cpp_args : cpp_extra_args,
                            link_args : link_extra_args,
                            install : true,
